--- a/index.html
+++ b/index.html
@@ -8,63 +8,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header class="hero">
-            <img id="hero-image" src="./images/owl.jpg">
-            <div id="hero-head"></div>
-            <div id="credits"></div>
-        </header>
-        <main id="main-content">
-            <div id="top-text">
-                <div>
-                    <p>This is not a real online service!  You know you need something like this in your life to help you realize your deepest dreams.</p>
-                    <p>Sign up now to get started.</p>
-                    <p>You <em>know</em> you want to.</p>
-                </div>
-            </div>
-            <div id="form">
-                <form action="" method="post">
-                    <fieldset id="enter-info">
-                        <legend>Enter Details</legend>
-
-                        <div>
-                            <div>
-                                <label for="first-name">First Name</label>
-                                <input class="field" type="text" id="first-name" name="first_name" placeholder="John" maxlength="16" minlength="3" required>
-                            </div>
-                            <div>
-                                <label for="last-name">Last Name</label>
-                                <input class="field" type="text" id="last-name" name="last_name" placeholder="Doe" maxlength="16" minlength="3" required>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <label for="user-email">Email</label>
-                                <input class="field" type="email" id="user-email" name="email" placeholder="you@example.com" required>
-                            </div>
-                            <div>
-                                <label for="phone-number">Phone Number</label>
-                                <input class="field" type="tel" id="user-phone-number" name="phone_number" placeholder="919-562-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="please enter a valid telephone number with dashes">
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <label for="password">Password</label>
-                                <input class="field" type="password" id="user-password" name="user_password" minlength="8" maxlength="32" placeholder="between 8 and 32 characters" required>
-                            </div>
-                            <div>
-                                <label for="confirm-password">Confirm Password</label>
-                                <input class="field" type="password" id="confirm-password" name="confirm_password" minlength="8" maxlength="32" placeholder="re-enter password" required>
-                            </div>
-                        </div>
-                    </fieldset>
-                    <fieldset id="submit">
-                        <button type="submit">Create Account</button>
-                        <p>Already have an account? <a href="./index.html">log in</a></p>
-                    </fieldset>
-                </form>
-            </div>
+    <div class="left">
+        <div id="logo-container">
+            <img id="logo" src="./images/owl_logo.png">
+            <h1 id="name">Owl Project</h1>
         </div>
+        <div id="credit-container">
+            <p>Img Credit: <a href="https://unsplash.com/@alken">Alfred Kenneally</a></p>
+        </div>
+    </div>
+    <div class="right">
+        <form action="" method="post" id="form-content">
+            <fieldset id="description">
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br> Sign up <em>now</em> to get started.<br> <br>  You <em>know</em> you want to</h1>
+            </fieldset>
+            <fieldset id="enter-info">
+                <legend>Enter Details</legend>
+        
+                <div id="row-one">
+                    <div class="label">
+                        <label for="first-name">First Name</label>
+                        <input class="field" type="text" id="first-name" name="first_name" placeholder="John" maxlength="16" minlength="3" required>
+                    </div>
+                    <div class="label">
+                        <label for="last-name">Last Name</label>
+                        <input class="field" type="text" id="last-name" name="last_name" placeholder="Doe" maxlength="16" minlength="3" required>
+                    </div>
+                </div>
+                <div id="row-two">
+                    <div class="label">
+                        <label for="user-email">Email</label>
+                        <input class="field" type="email" id="user-email" name="email" placeholder="you@example.com" required>
+                    </div>
+                    <div class="label">
+                        <label for="phone-number">Phone Number</label>
+                        <input class="field" type="tel" id="user-phone-number" name="phone_number" placeholder="919-562-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="please enter a valid telephone number with dashes">
+                    </div>
+                </div>
+                <div id="row-three">
+                    <div class="label">
+                        <label for="password">Password</label>
+                        <input class="field" type="password" id="user-password" name="user_password" minlength="8" maxlength="32" placeholder="between 8 and 32 characters" required>
+                    </div>
+                    <div class="label">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input class="field" type="password" id="confirm-password" name="confirm_password" minlength="8" maxlength="32" placeholder="re-enter password" required>
+                    </div>
+                </div>
+            </fieldset>
+            <fieldset id="submit">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="./index.html">log in</a></p>
+            </fieldset>
+        </form>
     </div>
 </body>
 </html>
