Added password checking script, added clicking animation to button, added class to button.
D
D
Complete:)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="left">
@@ -20,7 +21,7 @@
     <div class="right">
         <form action="" method="post" id="form-content">
             <fieldset id="description">
-                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br> Sign up <em>now</em> to get started.<br> <br>  You <em>know</em> you want to</h1>
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br> Sign up <em>now</em> to get started.<br> <br>  You <em>know</em> you want to!</h1>
             </fieldset>
             <fieldset id="enter-info">
                 <legend>Enter Details</legend>
@@ -57,7 +58,7 @@
                 </div>
             </fieldset>
             <fieldset id="submit">
-                <button type="submit">Create Account</button>
+                <button type="submit" id="submit-button">Create Account</button>
                 <p>Already have an account? <a href="./index.html">log in</a></p>
             </fieldset>
         </form>
